k8s/apps/mc-pos/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mc-pos
  labels:
    app.kubernetes.io/name: p2-pos
    app.kubernetes.io/part-of: p2-pos
    environment: production
