k8s/apps/mc-pos/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: mc-pos
  labels:
    app: pos-frontend
spec:
  type: ClusterIP
  selector:
    app: pos-frontend
  ports:
    - name: http
      port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pos-frontend
  namespace: mc-pos
  labels:
    app: pos-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pos-frontend
  template:
    metadata:
      labels:
        app: pos-frontend
    spec:
      containers:
        - name: pos-frontend
          image: ghcr.io/jayr-abawag/p2-pos-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
